--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^1.1.5",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vuex": "^3.1.3"
