--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
         args: deploy --only hosting
       env:
         PROJECT_ID: whim-ap
-        GCP_SA_KEY: ${{ secrets.GCPGCP_SA_KEY_APPS }}
+        GCP_SA_KEY: ${{ secrets.GCP_SA_KEY_APPS }}
