--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@chenfengyuan/vue-countdown": "^1.1.5",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "whim-client-vue": "^1.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
